Add Google OAuth credentials to .env.local

--- a/.env.local
+++ b/.env.local
@@ -1,1 +1,5 @@
 GEMINI_API_KEY=PLACEHOLDER_API_KEY
+
+# Google OAuth Configuration
+VITE_GOOGLE_CLIENT_ID=1080873193772-hl3j0jjkuu8v0gklo6q8oogc009if39c.apps.googleusercontent.com
+VITE_GOOGLE_CLIENT_SECRET=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
