--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
     "@google/genai": "^1.38.0",
+        "@react-oauth/google": "^0.12.1",
     "react-router-dom": "^7.13.0",
     "recharts": "^3.7.0"
   },
