--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -21,3 +21,6 @@ steps:
 
 images:
   - 'us-central1-docker.pkg.dev/$PROJECT_ID/cloud-run-source-deploy/nexus-ai-chief-of-staff:$COMMIT_SHA'
+
+options:
+  logging: CLOUD_LOGGING_ONLY
